--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         # list of Docker images to use as base name for tags
         images: |
-          name/app
+          hommayushi3/tgi-runpod-serverless
         # generate Docker tags based on the following events/attributes
         tags: |
           type=schedule
